Fix the gradient happening on small text posts.

--- a/assets/style.css
+++ b/assets/style.css
@@ -535,7 +535,7 @@ html.wf-inactive body {
  */
 @media (min-width: 480px) /* Tablet & Desktop */ {
   .entry-text .meta {
-    max-height: 100%;
+    height: 100%;
     -webkit-mask-image: -webkit-gradient(linear, left 80%, left bottom, from(#000), to(rgba(0,0,0,0)));
   }
 }
