--- a/css/base.styl
+++ b/css/base.styl
@@ -288,7 +288,7 @@ html
 .entry-text
   @media (min-width: 480px) /* Tablet & Desktop */
     .meta
-      max-height: 100%
+      height: 100%
       -webkit-mask-image: -webkit-gradient(linear, left 80%, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)))
 
   // Text
